@@ -28,8 +28,10 @@ apport (0.24) edgy; urgency=low
     useful for command line debugging, though).
   * problem_report.py: Add test case for appending new data to an existing
     report, fix write() function to not rely on an existing ProblemType key.
+  * problem_report.py: Add new method ProblemReport.add_to_existing() to
+    update an already existing problem report with new data. Add test case.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 29 Sep 2006 12:21:04 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 29 Sep 2006 13:14:51 +0200
 
 apport (0.23) edgy; urgency=low
 
